remove all changes