@@ -210,9 +210,9 @@ public class PipWriteFinalDecisionIt extends WriteFinalDecisionItBase {
 
         assertNull(result.getData().getOutcome());
 
-        assertEquals(DRAFT_DECISION_NOTICE.getValue(), result.getData().getInternalCaseDocumentData().getSscsInternalDocument().getFirst().getValue().getDocumentType());
-        assertEquals(LocalDate.now().toString(), result.getData().getInternalCaseDocumentData().getSscsInternalDocument().getFirst().getValue().getDocumentDateAdded());
-        assertEquals("Draft Decision Notice generated on " + LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-yyyy")) + ".pdf", result.getData().getInternalCaseDocumentData().getSscsInternalDocument().getFirst().getValue().getDocumentFileName());
+        assertEquals(DRAFT_DECISION_NOTICE.getValue(), result.getData().getSscsDocument().get(0).getValue().getDocumentType());
+        assertEquals(LocalDate.now().toString(), result.getData().getSscsDocument().get(0).getValue().getDocumentDateAdded());
+        assertEquals("Draft Decision Notice generated on " + LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-yyyy")) + ".pdf", result.getData().getSscsDocument().get(0).getValue().getDocumentFileName());
     }
 
     @NamedParameters("noAwardComparisons")
